# cpp_scratch_pad

./: .gitignore  CMakeLists.txt  README.md  build_and_run_callgrind.sh  build_and_run_gdb.sh  build_and_run_gprof.sh  build_and_run_release.sh  build_and_run_valgrind.sh  build_and_test_callgrind.sh  build_and_test_catchsegv.sh  build_and_test_debug.sh  build_and_test_gdb.sh  build_and_test_gprof.sh  build_and_test_release.sh  build_and_test_valgrind.sh  configure.sh  flake.nix  shell.nix
src-exe/: CMakeLists.txt  main.cpp
src-lib/: CMakeLists.txt  MyComplex.cpp  MyTypes.cpp  algo_practice.cpp  avl_tree.cpp  big_math.cpp  concurrency.cpp  demonstrate_linked_list.cpp  demonstrate_misc.cpp  demonstrate_templates.cpp  demonstrations.cpp  graph.cpp  linked_list.cpp  string_algos.cpp
src-lib/api/: MyComplex.hpp  MyTypes.hpp  algo_practice.hpp  avl_tree.hpp  big_math.hpp  binary_search_tree.hpp  concurrency.hpp  demonstrations.hpp  doubly_linked_list.hpp  graph.hpp  hash_map.hpp  heap.hpp  linked_list.hpp  my_span.hpp  sort_array_algorithms.hpp  string_algos.hpp
src-lib/oop_design_practice/: online_book_reader_system.hpp
tests/: AVLTests.cpp  AlgoPracticeTests.cpp  BSTTests.cpp  BigMathTests.cpp  CMakeLists.txt  DoublyLinkedListTests.cpp  GraphTests.cpp  HashMapTests.cpp  HeapTests.cpp  LinkedListTests.cpp  SortArrayAlgosTests.cpp  SpanTests.cpp  StdContainerTests.cpp  StringAlgosTests.cpp
